# CIMS-backend

./: .env.example  .gitignore  APIDocument.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  NewAPI.md  README.md  export_openapi.py  fetch_protos.py  fix_imports.py  go.mod  go.sum  migration.py  nixpacks.toml  nuitka-ubuntu.sh  pyproject.toml  railway.json  updater.py
.github/workflows/: check.yml  ci.yml  nuitka.yml  python-ci.yml  release.yml
api/Protobuf/AuditEvent/: ProfileItemUpdated.proto
api/Protobuf/Client/: AuditScReq.proto  ClientCommandDeliverScReq.proto
api/Protobuf/Command/: GetClientConfig.proto
api/Protobuf/Enum/: CommandTypes.proto  ListItemUpdateOperations.proto  Retcode.proto
api/Protobuf/Server/: AuditScRsp.proto  ClientCommandDeliverScRsp.proto  ClientRegisterScRsp.proto  ConfigUploadScRsp.proto  HandshakeScRsp.proto
api/Protobuf/Service/: Audit.proto  ClientCommandDeliver.proto  ClientRegister.proto  ConfigUpload.proto  Handshake.proto
app/: main.py
app/api/: __init__.py
app/api/admin/: __init__.py  account_routes.py  admin_bulk.py  admin_totp.py  admin_totp_actions.py  admin_totp_reset.py  approval_routes.py  auth_routes.py  helpers.py  pairing_routes.py  permission_routes.py  quota_routes.py  role_routes.py  router.py  settings.py  tenant_actions.py  tenant_crud.py  tenant_detail.py  tenant_token.py  totp_confirm.py  totp_enable.py  totp_recover.py  totp_routes.py  totp_temp.py  totp_verify.py  user_create.py  user_delete.py  user_detail.py  user_helpers.py  user_password.py  user_routes.py
app/api/client/: __init__.py  manifest.py  resource.py  router.py  token_get.py
app/api/command/: __init__.py  batch.py  client_config.py  client_control.py  client_notification.py  client_status.py  data_crud.py  data_delete.py  data_patch.py  data_token.py  data_write.py  model_map.py  payload_validator.py  router.py  version_check.py
app/api/management/: __init__.py  account_access.py  account_apply.py  account_client.py  account_detail.py  account_helpers.py  account_info.py  account_invitation.py  account_list.py  account_pairing.py  account_pairing_action.py  account_pre_reg_crud.py  account_pre_reg_detail.py  account_pre_reg_preset.py  account_resource.py  account_router.py  account_search.py  bulk.py  router.py  token_deactivate.py  token_refresh.py  token_verify.py  user_apply.py  user_auth.py  user_info.py  user_info_email.py  user_info_username.py  user_password.py  user_totp.py
app/api/management_config/: __init__.py  routes.py
app/api/schemas/: __init__.py  account.py  account_out.py  auth.py  base.py  batch.py  client.py  notification.py  (+10 more)
app/apps/: __init__.py  admin_app.py  client_app.py  lifespan.py  lifespan_shutdown.py  management_app.py
app/core/: __init__.py  config.py  logging.py
app/grpc/: __init__.py  session_manager.py
app/models/: __init__.py  account.py  account_member.py  account_quota.py  audit.py  base.py  client.py  config_upload.py  custom_role.py  database.py  engine.py  member_permission.py  pairing.py  permission_def.py  pre_registered_client.py  reserved_name.py  resource_files.py  resource_mixin.py  role_permission.py  schema_init.py  session.py  system_config.py  tenant.py  user.py
app/oobe/: __init__.py  cli_parser.py  cmd_account.py  cmd_config.py  cmd_daemon.py  cmd_init.py  cmd_monit.py  cmd_quota.py  cmd_reserved.py  cmd_role.py  cmd_serve.py  cmd_start.py  cmd_startup.py  cmd_stop.py  cmd_user.py  commands.py  detector.py  initializer.py  prompts.py  reserved_list.py  validator.py
app/services/: __init__.py  auth_token.py  pairing_utils.py  rbac_seed.py  resource_token.py
cims/: CIMS.py  Shell.py
cims/ManagementServer/: api.py  command.py  gRPC.py
cims/database/: connection.py  models.py
cims/logger/: __init__.py
cmd/cims/: main.go
internal/data/: db.go
internal/model/: domain.go  models.go
internal/service/: client.go  command.go  config.go
src/cims/: BuildInClasses.py  CIMS.py  Shell.py
tests/: __init__.py  conftest.py  mock_client.py  test_admin_tenant.py  test_api.py  test_basic.py  test_cims.py  test_coverage.py  test_grpc.py  test_mock_client_lifecycle.py  test_multi_tenant_isolation.py  test_oobe.py  test_permission_matrix.py  test_permissions.py  test_quota_enforcement.py  test_quotas.py  test_roles.py  test_security_attacks.py  test_totp_2fa.py  test_user_auth.py
(+152 files in other folders)
