[project]
name = "cims-backend"
version = "0.1.0"
description = "ClassIsland Management Server Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]~=3.3.0",
    "redis[hiredis]~=7.3.0",
    "alembic~=1.18.0",
    "fastapi~=0.135.0",
    "grpcio-reflection~=1.78.0",
    "grpcio-tools~=1.78.0",
    "grpcio~=1.78.0",
    "protobuf~=6.33.0",
    "pydantic-settings~=2.13.0",
    "pydantic~=2.12.0",
    "sqlalchemy~=2.0.48",
    "uvicorn[standard]~=0.41.0",
    "pgpy~=0.6.0",
    "standard-imghdr~=3.13.0",
    "argon2-cffi~=25.1.0",
    "pydantic[email]~=2.12.0",
    "pyotp~=2.9.0",
]

[project.scripts]
cims = "app.main:main"

[dependency-groups]
dev = [
    "black",
    "httpx",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "-W ignore::DeprecationWarning:imghdr"
filterwarnings = [
    "error",
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
    "ignore:Selected compression algorithm:UserWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    "ignore:imghdr was removed:DeprecationWarning",
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = [
    "app/grpc/api/Protobuf/*",
    "app/main.py",
]

